Barkod okuma ekranı eklendi. Testler yapılmadı

--- a/scanme_app/pubspec.yaml
+++ b/scanme_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_animate: ^4.5.2
   mobile_scanner: ^7.1.4
   http: ^1.6.0
+  openfoodfacts: ^3.28.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
