--- a/scanme_app/pubspec.yaml
+++ b/scanme_app/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   http: ^1.6.0
   openfoodfacts: ^3.28.0
   permission_handler: ^12.0.1
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
