--- a/scanme_app/pubspec.yaml
+++ b/scanme_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   intl: ^0.20.2
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
