feat: Add app-specific exception classes for better error handling
feat: Implement onboarding screen with animated transitions and user guidance

feat: Create connectivity service for monitoring network status

feat: Introduce hash service for secure password hashing

feat: Develop onboarding service to manage onboarding status

feat: Add reusable empty state widget for displaying no content scenarios

feat: Implement error display widget with retry functionality

feat: Create offline banner widget to indicate network status

feat: Add scan success overlay for successful barcode scans

feat: Implement shimmer loading widget for product result screen

--- a/frontend/scanme_app/.gitignore
+++ b/frontend/scanme_app/.gitignore
@@ -43,3 +43,22 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# User specific temporary files
+junkmds/
+*.txt
+analysis_*.txt
+analyze_output.txt
+
+# Local configuration files (do not commit)
+**/android/local.properties
+.env
+
+# Gradle cache
+.gradle/
+
+# Ignored Platforms
+ios/
+linux/
+macos/
+web/
