--- a/frontend/scanme_app/pubspec.yaml
+++ b/frontend/scanme_app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shimmer: ^3.0.0                # Loading placeholder animations
   vibration: ^2.0.0              # Haptic feedback on scan
   cached_network_image: ^3.3.1   # Image caching for offline support
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
